few cosmetic and content changes

--- a/backend/sections/analysis.pug
+++ b/backend/sections/analysis.pug
@@ -26,7 +26,7 @@ ol
     li Individuals themselves, to understand how their experience is curated by the platform.
     li People using our tools and analytics. To this end, a simple dashboard would be developed on top of a documented API, in order to enable other free software developers to extend the AGPL technology.
     li Other individual third parties to which the owner of the data could share anonymously some of their related videos, in order to compare with them how personalisation leads to different resulting experiences.
-    li Additional third parties, such as research groups, if users opt-in for this.
+    li Additional third parties, such as research groups, if the adopter opt-in for this.
     li Software-defined analytics which could be run on all datasets, as long as the results help identify specific phenomena, and where data is not linkable to any individual. Aggregation, pseudonimisation and other forms of protection should be incorporated wherever it is possible (e.g. videos with few views could be removed [e.g. only videos with >1000 views] to prevent personal information from emerging in the dataset).
 
 
@@ -35,8 +35,13 @@ h3 Approach
 p This method includes asking the individual to install a web-extension, and we should be as clear as possible on how their data would be processed. Despite not including personal data, the sequence of videos seen by an individual might permit us to attribute behavioural information; therefore, we should manage the dataset with the level of protection required by GDPR. 
 p This implies:
 ol
+    li call our adopters 
+        i people
+        |  and not 
+        i users 
+        | =) 
     li A clear opt-in, which is revocable and accessible.
-    li A clear data retention policy.
+    li A customizable data retention policy.
     li Full transparency on the data processed and stored (except leakage of personal data, or anything not anonymized enough that can lead to any attribution/inference).
     li Data protection impact assessment.
     li A method to update individuals in case of a data breach.
@@ -90,7 +95,9 @@ h3 Outreach
 
 p This is a communication/marketing strategy that might be sensible, but only if functionalities (as in roadmap stage 5) are live. There are few possible methods:
 ol
-    li European electoral analysis (integrate this research method as part of the https://eu19.tracking.exposed).
+    li
+        a(class="yellow" href="https://eu19.tracking.exposed") European electoral analysis
+        |  (we integrate this research method as part of our growing package).
     li YouTubers are facing pressure from algorithmic logic, but they have no way to understand its effects. We can offer a tool which YouTubers may have an interest in promoting among their audiences.
     li We can work on animated gifs and videos to explain how algorithms cause divergences in people's experiences based on what they are shown.
     li The website would be mostly dedicate to technology (API, pages collected, statistics). It would mostly target researchers and analysts. Exception made for the homepage, which will present more mainstream communication. Mock-ups are not yet defined.
@@ -98,5 +105,7 @@ ol
 h3 Partners
 
 p tracking.exposed is a free software development group, the goal of which is to manage technology and maintain a database enabling research in the public interest.
-p As of 2019, ALEX has a small grant allocated, to "test the possibility to extend the approach of fbtrex to other platforms", we already know this is possible, and for strategic reasons this tool might be used to attract attention and visibility to our European Election analysis.
+p As of 2019, 
+    a(href="https://algorithms.exposed" class="yellow") ALEX
+    |  has a small grant allocated, to "test the possibility to extend the approach of fbtrex to other platforms", we already know this is possible, and for strategic reasons this tool might be used to attract attention and visibility to our European Election analysis.
 p The general approach of tracking.exposed and algorithms.exposed projects is to find partners which can lead in promoting and disseminating the technology, while we implement the functionalities they need. The only constraints are our ethical mandate.
