--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -32,7 +32,9 @@ html
         include downloads
 
     .container-fluid.spaced.padded
-        p This is far from being completed, but it is a good beginning. If you want to understand how we work, you can look up the first two years of experiences made with facebook.tracking.exposed, or read the spring 2019 youtute.tracking.exposed roadmap.
+        p This is far from being completed, but it is a good beginning. If you want to understand how we work, you can look up the first two years of experiences made with 
+            a(href="https://facebook.tracking.exposed") facebook.tracking.exposed
+            |, or read below the spring 2019 youtute.tracking.exposed roadmap.
 
         h2 experimental services and APIs
         include api
@@ -42,7 +44,7 @@ html
 
     .container-fluid.spaced.padded
         h2 Why? 
-        p
+        p This is 
             a(class="yellow" href="https://tracking.exposed") Tracking Exposed
-            |: we fight for a web which is home of the many and not for the few
+            |: we fight for a web which is home of the many and not for the few. Algorithm literacy is in our mandate, and YouTube should be scrutinized by third party researchers, if not by every YT user, with the help of tools like ours.
 
