implemented the related viz

--- a/backend/sections/data.pug
+++ b/backend/sections/data.pug
@@ -83,7 +83,7 @@ html
         .centered
             img(src="https://user-images.githubusercontent.com/89555/56743946-d1321400-6777-11e9-9c84-5f97de2b0b63.png")
 
+        h2 Quick takeaway? 90% of the related content are personalized.
         p Here you can see another video compared. The first four columns comes from the same profile: some suggestion keep being the same, other change. This means, even the data you might collect just about your own person might show you something about how Youtube has profiled you.
         .centered
             img(src="https://user-images.githubusercontent.com/89555/56743956-d4c59b00-6777-11e9-815e-f34f67c9bb28.png")
-
