implemented last page

--- a/backend/sections/api.pug
+++ b/backend/sections/api.pug
@@ -19,7 +19,7 @@ ul
             i videoId
             |  was in the related list of other videos, so you can see where videoId was suggested
     li 
-        a(class="yellow" href="/api/v1/last") Last received evidence
+        a(class="yellow" href="/last") Last received evidence
         br
         b API 
         code /api/v1/last
