improved last video viz

--- a/backend/sections/about.pug
+++ b/backend/sections/about.pug
@@ -40,6 +40,9 @@ html
             | The software is in AGPL license, 
             a(href="https://github.com/tracking-exposed/yttrex/graphs/contributors" target="_blank") contributors
             |  should add their name in this page.
+        p This project is part of 
+            a(href="https://algorithms.exposed") ALEX
+            |  research project.
         p 
             b Contacts
             |: support at tracking dot exposed; Our mattermost channel 
