--- a/backend/sections/last.pug
+++ b/backend/sections/last.pug
@@ -30,7 +30,10 @@ html
   body(onload="initLast()")
 
     include header
+
     .container.spaced.padded
-        h2 The last evidences recorded
+        h2 The last videos collected
+
+    .container
         #recent
 
