--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -4,7 +4,7 @@ html
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    meta(name="keywords" content="yt, t-rex")
+    meta(name="keywords" content="youtube.tracking.exposed, youtube algorithm, algorithm accountability, google algorithms, knowledge is freedom")
 
     link(rel='stylesheet', href='/css/bootstrap.css')
     link(rel='stylesheet', href='/css/index.css')
@@ -17,25 +17,30 @@ html
     meta(property="og:description" content="youtube.TREX is a browser extension to collect the related video suggested by yt algorthim. It is intended to let people collect personalized evidences and later compare them with others")
     meta(property="og:url" content="https://youtube.tracking.exposed")
     meta(property="og:image" content="https://youtube.tracking.exposed/images/youtube-trex-logo.png")
-    meta(property="og:image:width" content="1000")
-    meta(property="og:image:height" content="1000")
+    meta(property="og:image:width" content="412")
+    meta(property="og:image:height" content="119")
 
-    title ytTREX
+    title youtube.tracking.exposed: knowledge is freedom
 
   body
     include header
     
     .container-fluid.padded
-        p A tool providing a small experimental infrastructure for the youtube algorithm analysis
+        p A tool providing an 
+            i experimental infrastructure 
+            |  to do youtube algorithm analysis
+
+        h2 How does it work?
+        p In two ways: you can 
+            a(href="/data") play the data collected
+            |  by the collective obeservation, or you can:
+        h2 Contribute to the collection
+        p You have to install a browser extension: this is necessary because every person receive a personalized version of the experience, and the only way to understand the algorithm is compare our unique vision. Only the adopter (which is not a person, but rather "the browser where the extension is installed, and only that") can see their sequence of videos, but other people cannot. They might only compare the related (and search into the related)
 
     .container-fluid.spaced.padded
         include downloads
 
     .container-fluid.spaced.padded
-        p This is far from being completed, but it is a good beginning. If you want to understand how we work, you can look up the first two years of experiences made with 
-            a(href="https://facebook.tracking.exposed") facebook.tracking.exposed
-            |, or read below the spring 2019 youtute.tracking.exposed roadmap.
-
         h2 experimental services and APIs
         include api
 
