ops, forgotten link

--- a/backend/sections/data.pug
+++ b/backend/sections/data.pug
@@ -35,7 +35,7 @@ html
 
     .container
         p play with the related-videos! 
-            a(href="https://github.com/tracking-exposed/experiments-data/raw/master/yttrex/related-vidoes.json.gz") download the .json.gz
+            a(href="https://github.com/tracking-exposed/experiments-data/tree/master/yttrex") download the JSON file
             |  (70Mb uncompressed)
         p 9573 videos, watched in 6 months by 20 different users, produced 150824 suggested video. Everyone of this object has this format:
     .container
