author page should exist

--- a/backend/sections/analysis.pug
+++ b/backend/sections/analysis.pug
@@ -95,6 +95,9 @@ ol
     li ☑  Release a simple API without any interface, to let researchers and developers experiment with the tool
     li ☐  Develop an interface which permits an individual to delete their submission and control data retention policy
     li ☑  Develop functionalities to let adopters play and compare their results.
+    li ☐  Develop the 
+        a(class="yellow" href="/author") author 
+        | page, to let people compare video selecting by their chosen source.
 
 h3 Research
 
