--- a/backend/sections/personal/landing.pug
+++ b/backend/sections/personal/landing.pug
@@ -24,8 +24,12 @@ html
         include header
         .container
             h2 Personal interface: this link is only know by you; keep it private
-            p From this interface you should see the recorded session you sent us, delete, and download. 
-                i In theory. 
+            p 
+                b Download 
+                | the 
+                a(onclick="downloadCSV()" href="") CSV of your last activities
+                |. Please note, this is wₒᵣₖᵢₙg ₚᵣₒₜₒₜyₚₑ, if your data looks wrong get in touch with support at tracking dot exposed; From this interface you should see the recorded session you sent us, delete, filter, share them...
+                i in theory. 
                 |  In practice: this is a 
                 a(href="https://github.com/tracking-exposed/yttrex/issues") work in progress
                 |. At the moment, the controls and the export are pretty limited.
