much more local linking

--- a/backend/sections/index.pug
+++ b/backend/sections/index.pug
@@ -25,7 +25,7 @@ html
   body
     include header
     
-    .container-fluid.padded
+    .container.padded
         p A tool providing an 
             i experimental infrastructure 
             |  to do youtube algorithm analysis
@@ -37,17 +37,17 @@ html
         h2 Contribute to the collection
         p You have to install a browser extension: this is necessary because every person receive a personalized version of the experience, and the only way to understand the algorithm is compare our unique vision. Only the adopter (which is not a person, but rather "the browser where the extension is installed, and only that") can see their sequence of videos, but other people cannot. They might only compare the related (and search into the related)
 
-    .container-fluid.spaced.padded
+    .container.spaced.padded
         include downloads
 
-    .container-fluid.spaced.padded
+    .container.spaced.padded
         h2 experimental services and APIs
         include api
 
-    .container-fluid.spaced.padded
+    .container.spaced.padded
         include analysis
 
-    .container-fluid.spaced.padded
+    .container.spaced.padded
         h2 Why? 
         p This is 
             a(class="yellow" href="https://tracking.exposed") Tracking Exposed
