--- a/backend/sections/related.pug
+++ b/backend/sections/related.pug
@@ -32,10 +32,8 @@ html
     include header
     
     .container.spaced.padded
-        h2 https://www.youtube.com/watch?v=
-            span.videoId VIDEOID
-            |  →  https://youtube.tracking.exposed/related/
-            span.videoId VIDEOID
+        h2 Search if this video ever been as YT's 
+            i recommended
 
     .container.centered
         input(type="text" class="entry" id="search" placeholder="youtube.com/watch?v=...") 
