--- a/backend/sections/compare.pug
+++ b/backend/sections/compare.pug
@@ -32,11 +32,7 @@ html
     include header
     
     .container.spaced.padded
-        h2 https://www.youtube.com/watch?v=
-            span.videoId VIDEOID
-            |  →  https://youtube.tracking.exposed/compare/
-            span.videoId VIDEOID
-           
+        h2 Compare how the same video get different reccomendations
         #comparison
 
     .container.spaced.padded
