--- a/extension/src/popup/font.css
+++ b/extension/src/popup/font.css
@@ -1,2 +1,4 @@
-@font-face { font-family: Trex-Regular; 
-			 src: url('/Trex-Regular.ttf'); } 
+@font-face {
+  font-family: Trex-Regular;
+  src: url('/Trex-Regular.ttf');
+}
