--- a/src/embedded/dashboard.css
+++ b/src/embedded/dashboard.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Trex-Regular";
+  font-family: 'Trex-Regular';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
