chore: build project with tsc and react-app-rewired

--- a/public/css/youchoose-ux.css
+++ b/public/css/youchoose-ux.css
@@ -1,3 +1,15 @@
+body {
+  margin: 0;
+  font-family: 'Trex-Regular';
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
 #ycaibar {
   background-color: #f50057;
   padding: 4px;
