--- a/public/css/font.css
+++ b/public/css/font.css
@@ -1,4 +1,4 @@
 @font-face {
-  font-family: Trex-Regular;
-  src: url('/css/Trex-Regular.ttf');
+  font-family: "Trex-Regular";
+  src: url('./Trex-Regular.ttf');
 }
