--- a/public/css/youchoose-ux.css
+++ b/public/css/youchoose-ux.css
@@ -1,263 +1,5 @@
-@import url("./font.css");
+@import url('./font.css');
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-font,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-input,
-select,
-textarea,
-button,
-svg,
-path {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  vertical-align: baseline;
-  background: transparent;
-  -webkit-transition: all 0.2s ease-out;
-  -moz-transition: all 0.2s ease-out;
-  -o-transition: all 0.2s ease-out;
-  transition: all 0.2s ease-out;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#ycai {
+  font-family: 'Trex-Regular';
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-#ycaibar {
-  background-color: #f50057;
-  padding: 4px;
-  color: white;
-  font-weight: bolder;
-  text-align: left;
-}
-
-.button-list {
-  text-align: center;
-}
-
-.button-list button {
-  border-radius: 4px;
-  border-color: darkmagenta;
-  border: 1px;
-}
-
-.development_link {
-  font-size: 1.1em;
-  padding-bottom: 10px;
-  font-family: 'Courier New', Courier, monospace;
-  color: darkslategray;
-}
-
-.video_box {
-  position: relative;
-  margin-left: calc(var(--ytd-rich-grid-item-margin) / 2);
-  margin-right: calc(var(--ytd-rich-grid-item-margin) / 2);
-  margin-top: 6px;
-  margin-bottom: 16px;
-  width: calc(90% / 1 - var(--ytd-rich-grid-item-margin) - 0.01px);
-  font-size: 1.3em;
-}
-
-.video_thumb {
-  width: calc(30% / 1 - var(--ytd-rich-grid-item-margin) - 0.01px);
-  background: green;
-}
-
-.thirdpd {
-  margin-bottom: 25px;
-  font-size: 1.2em;
-}
-
-.shift-left {
-  margin-left: 10px;
-}
-
-#ycai_third_party {
-  font-size: 1.4em;
-  display: 'none';
-}
-/*
-#ycai_container {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 45px;
-  margin-bottom: 16px; 
-  display: flex;
-  flex-direction: row;
-  position: relative;
-  border: solid 3px #f3bd00;
-  background: #f3bd0011;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  width: calc(100% - var(--ytd-rich-grid-item-margin) * 2);
-  max-width: calc(
-    var(--ytd-rich-grid-items-per-row) *
-      (var(--ytd-rich-grid-item-max-width) + var(--ytd-rich-grid-item-margin))
-  );
-}
-
-#ycai_title {
-  color: var(--yt-spec-text-primary);
-  font-family: 'Roboto', 'Arial', sans-serif;
-  font-size: 22px;
-  position: absolute;
-  left: 32px;
-  top: 5px;
-  font-weight: normal;
-}
-
-.language_option {
-  color: var(--yt-spec-text-primary);
-  font-family: 'Roboto', 'Arial', sans-serif;
-  float: right;
-  margin-top: 8px;
-  margin-left: 4px;
-}
-
-#ycai_link {
-  color: var(--yt-spec-text-primary);
-  font-family: 'Roboto', 'Arial', sans-serif;
-  position: absolute;
-  right: 0px;
-  top: 20px;
-}
-
-#ycai_icon {
-  position: absolute;
-  left: 0px;
-}
-
-
-.video_title {
-  color: var(--yt-spec-text-primary);
-  margin-bottom: 6px;
-  font-family: 'Roboto', 'Arial', sans-serif;
-  letter-spacing: var(--yt-link-letter-spacing, normal);
-  white-space: normal;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-line-clamp: 2;
-  font-weight: 500;
-  display: -webkit-box;
-  line-height: 2rem;
-  max-height: 4rem;
-  min-height: 4rem;
-}
-
-.video_link {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
-.details_div {
-  position: relative;
-  cursor: pointer;
-}
-
-.video_text {
-  color: var(--yt-endpoint-color, var(--yt-spec-text-secondary));
-  font-family: 'Roboto', 'Arial', sans-serif;
-  word-break: break-word;
-  font-size: 1.4rem;
-  font-weight: 400;
-}
-
-.inline_div {
-  position: absolute;
-  width: 100%;
-  top: -38px;
-}
-
-.time_span {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  color: white;
-  background-color: var(--yt-spec-static-overlay-background-heavy);
-  margin: 4px;
-  padding: 3px 4px;
-  height: 12px;
-  border-radius: 2px;
-  flex-direction: row;
-  align-items: center;
-  cursor: pointer;
-  font-size: var(--yt-badge-font-size, 1.2rem);
-  font-weight: 500;
-  line-height: var(--yt-badge-line-height-size, 1.2rem);
-  letter-spacing: var(--yt-badge-letter-spacing, 0.5px);
-}
-
-.thumb_div {
-  position: relative;
-  margin-bottom: 6px;
-}
-*/
