--- a/src/resources/global.css
+++ b/src/resources/global.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: "Trex";
-  src: url('./Trex-Regular.ttf');
+  src: url('./font/Trex-Regular.ttf');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Trex";
-  src: url('./Trex-Medium.ttf');
+  src: url('./font/Trex-Medium.ttf');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Trex";
-  src: url("./Trex-Bold.ttf");
+  src: url("./font/Trex-Bold.ttf");
   font-weight: 800;
   font-style: normal;
 }
