--- a/src/resources/global.css
+++ b/src/resources/global.css
@@ -1,20 +1,29 @@
 @font-face {
-  font-family: "Trex";
+  font-family: 'Trex';
   src: url('./font/Trex-Regular.ttf');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Trex";
+  font-family: 'Trex';
   src: url('./font/Trex-Medium.ttf');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Trex";
-  src: url("./font/Trex-Bold.ttf");
+  font-family: 'Trex';
+  src: url('./font/Trex-Bold.ttf');
   font-weight: 800;
   font-style: normal;
+}
+
+html,
+body,
+#ycai-dashboard body #ycai {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
