--- a/YCAI/src/resources/global.css
+++ b/YCAI/src/resources/global.css
@@ -25,7 +25,7 @@ html#ycai-dashboard body,
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: auto;
 }
 
 html#ycai-popup,
