chore: migrate titkok extension to TypeScript

--- a/services/tktrex/extension/src/popup/font.css
+++ b/services/tktrex/extension/src/popup/font.css
@@ -1,4 +1,7 @@
 @font-face {
   font-family: Trex-Regular;
-  src: url('/Trex-Regular.ttf');
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: url('./Trex-Regular.ttf');
 }
