--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -4,16 +4,30 @@
  * work well for content-centric websites.
  */
 
+@font-face {
+  font-family: Trex-Regular;
+  src: url('/fonts/Trex-Regular.ttf');
+}
+
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-font-family-base: "Trex-Regular";
+  --ifm-heading-font-family: "Trex-Regular";
+  --ifm-color-primary: #53c1b6;
+  --ifm-color-primary-dark: #42b7ab;
+  --ifm-color-primary-darker: #3eaca1;
+  --ifm-color-primary-darkest: #338e85;
+  --ifm-color-primary-light: #67c8bf;
+  --ifm-color-primary-lighter: #71ccc3;
+  --ifm-color-primary-lightest: #90d7d0;
   --ifm-code-font-size: 95%;
+  --ifm-navbar-background-color: #1b1b1b;
+  --ifm-navbar-link-color: white;
+  --ifm-footer-background-color: #53c1b6;
+  --ifm-footer-color: white;
+  --ifm-footer-title-color: white;
+  --ifm-footer-link-color: white;
+  --ifm-footer-link-hover-color: #1b1b1b;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -25,6 +39,8 @@ html[data-theme='dark'] {
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-navbar: #1b1b1b;
+  --ifm-footer-background-color: #53c1b6;
 }
 
 .docusaurus-highlight-code-line {
